# unittest_cmake

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.MD  mockOptions.yml
main/: CMakeLists.txt  main.c
mocks/: CMakeLists.txt  mock_math_lib.c  mock_math_lib.h  mock_my_lib.c  mock_my_lib.h
src/: CMakeLists.txt  math_lib.c  math_lib.h  my_lib.c  my_lib.h  test_my_lib.c
test/: CMakeLists.txt
test/mocker_test/: CMakeLists.txt  suite_2.c
test/suite_1/: CMakeLists.txt  suite_1.c
